--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
 	<script>
 			var canvas = document.querySelector("#unity-canvas");
 			var config = {
-				dataUrl: "./Build/webgl.data.unityweb",
-				frameworkUrl: "./Build/webgl.framework.js.unityweb",
-				codeUrl: "./Build/webgl.wasm.unityweb",
+				dataUrl: "Build/webgl.data.unityweb",
+				frameworkUrl: "Build/webgl.framework.js.unityweb",
+				codeUrl: ".Build/webgl.wasm.unityweb",
 				streamingAssetsUrl: "StreamingAssets",
 				companyName: "DefaultCompany",
 				productName: "Blade_Bearer",
