--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 			var config = {
 				dataUrl: "Build/webgl.data.unityweb",
 				frameworkUrl: "Build/webgl.framework.js.unityweb",
-				codeUrl: ".Build/webgl.wasm.unityweb",
+				codeUrl: "Build/webgl.wasm.unityweb",
 				streamingAssetsUrl: "StreamingAssets",
 				companyName: "DefaultCompany",
 				productName: "Blade_Bearer",
