--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 <body>
 	<div id="gameContainer">
 		<canvas id="unity-canvas" data-pixel-art="false"></canvas>
-		<script src="./Build/webgl.loader.js"></script>
+		<script src="Build/webgl.loader.js"></script>
 		<script type = "module"  src="./SmartContract.js"> </script>
 	<script>
 			var canvas = document.querySelector("#unity-canvas");
