--- a/index.html
+++ b/index.html
@@ -47,14 +47,14 @@
 <body>
 	<div id="gameContainer">
 		<canvas id="unity-canvas" data-pixel-art="false"></canvas>
-		<script src="Build/webgl.loader.js"></script>
+		<script src="./Build/webgl.loader.js"></script>
 		<script type = "module"  src="./SmartContract.js"> </script>
 	<script>
 			var canvas = document.querySelector("#unity-canvas");
 			var config = {
-				dataUrl: "Build/webgl.data.unityweb",
-				frameworkUrl: "Build/webgl.framework.js.unityweb",
-				codeUrl: "Build/webgl.wasm.unityweb",
+				dataUrl: "./Build/webgl.data.unityweb",
+				frameworkUrl: "./Build/webgl.framework.js.unityweb",
+				codeUrl: "./Build/webgl.wasm.unityweb",
 				streamingAssetsUrl: "StreamingAssets",
 				companyName: "DefaultCompany",
 				productName: "Blade_Bearer",
